deploy/home/odinbot/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`home.ticklethepanda.co.uk`) && PathPrefix(`/odinbot`)
      services:
        - name: odinbot-service
          namespace: home
          port: 80
